workload/kube-system/templates/aws-pod-identity-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: pod-identity-webhook
  annotations:
    prometheus.io/port: "443"
    prometheus.io/scheme: "https"
    prometheus.io/scrape: "true"
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: pod-identity-webhook
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-identity-webhook
  annotations:
    cert-manager.io/inject-ca-from: kube-system/pod-identity-webhook
webhooks:
  - name: pod-identity-webhook.amazonaws.com
    failurePolicy: Ignore
    clientConfig:
      service:
        name: pod-identity-webhook
        namespace: kube-system
        path: "/mutate"
    objectSelector:
      matchExpressions:
        - key: eks.amazonaws.com/skip-pod-identity-webhook
          operator: "DoesNotExist"
          values: []
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    admissionReviewVersions: ["v1beta1"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-identity-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-identity-webhook
  template:
    metadata:
      labels:
        app: pod-identity-webhook
    spec:
      serviceAccountName: pod-identity-webhook
      containers:
        - name: pod-identity-webhook
          image: amazon/amazon-eks-pod-identity-webhook:v0.6.6
          imagePullPolicy: Always
          command:
            - /webhook
            - --in-cluster=false
            - --namespace=kube-system
            - --service-name=pod-identity-webhook
            - --annotation-prefix=eks.amazonaws.com
            - --token-audience=sts.amazonaws.com
            - --logtostderr
          volumeMounts:
            - name: cert
              mountPath: "/etc/webhook/certs"
              readOnly: true
      volumes:
        - name: cert
          secret:
            secretName: pod-identity-webhook-cert
